RESOLVED FIXED279131
[WebGPU] Device lost and uncaptured errors callbacks were being retained too long
https://bugs.webkit.org/show_bug.cgi?id=279131
Summary [WebGPU] Device lost and uncaptured errors callbacks were being retained too ...
Mike Wyrzykowski
Reported 2024-09-04 10:38:58 PDT
[WebGPU] Device lost and uncaptured errors callbacks were being retained too long
Attachments
Radar WebKit Bug Importer
Comment 1 2024-09-04 10:39:14 PDT
Mike Wyrzykowski
Comment 2 2024-09-04 11:31:11 PDT
EWS
Comment 3 2024-09-04 22:47:03 PDT
Committed 283192@main (76b7aa864431): <https://commits.webkit.org/283192@main> Reviewed commits have been landed. Closing PR #33128 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.