[WebGPU] Device lost and uncaptured errors callbacks were being retained too long https://bugs.webkit.org/show_bug.cgi?id=279131 rdar://135283160

Reviewed by Dan Glastonbury.

When the remote IPC interface goes away, we need to call the callback
to ensure the async IPC message which was setup gets called at some point.

Otherwise, we retain the completion handler every time the page is refreshed, leading
to an effective memory leak.

* Source/WebCore/Modules/WebGPU/Implementation/WebGPUDeviceImpl.cpp:
(WebCore::WebGPU::DeviceImpl::~DeviceImpl):
* Source/WebGPU/WebGPU/Device.mm:
(WebGPU::Device::~Device):
(WebGPU::Device::setUncapturedErrorCallback):
* Source/WebGPU/WebGPU/WebGPUExt.h:

Canonical link: https://commits.webkit.org/283192@main